# tippy

./: Cargo.toml  README.md
res/: code_success.html
src/: anilist_client.rs  anilist_connection.rs  anilist_interface.rs  anime_entry.rs  entry.rs  interface.rs  list_entry.rs  main.rs  new_terminal.rs  search_entry.rs  secrets.example.rs  settings.rs  terminal.rs  tippy.rs
src/anilist/: anilist_interface.rs  client.rs  interface.rs  mod.rs  queries.rs
src/new_scene/: anime_search.rs  main_list.rs  mainlist.rs  mod.rs  test_struct.rs
src/scene/: anime_details.rs  anime_info.rs  anime_search.rs  main_list.rs  mainlist.rs  mod.rs  scrollable.rs  settings.rs
