[package]
name = "tippy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version="1", features=["full"]}
httparse = "1"
webbrowser = "0"
futures = "0.3"