[package]
name = "tippy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
unicode-segmentation = "1"
unicode-width = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
reqwest = { version = "0.11", features = ["json"]}
tokio = { version="1", features=["full"]}
httparse = "1"
webbrowser = "0"
futures = "0.3"
strum = "0.21"
strum_macros = "0.21"
